error scrollbar fix

--- a/app/globals.css
+++ b/app/globals.css
@@ -81,3 +81,7 @@ body {
     clip-path: inset(0 -1ch 0 0);
   }
 }
+
+.scrollbar-hide::-webkit-scrollbar {
+    display: none; /* Chrome, Safari y Opera */
+  }
